Fix viewing categories on mobile

--- a/Web-Server/frontend/src/components/layout/common/Styles.scss
+++ b/Web-Server/frontend/src/components/layout/common/Styles.scss
@@ -52,3 +52,9 @@
   background-color: $navbar-secondary !important;
   text-align: center;
 }
+
+.vw-80 {
+  @media (max-width: $tablet-width) {
+    width: 81vw;
+  }
+}
